<resources>
    <string name="app_name">Slugging</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="facebook_app_id">511051075717742</string>
    <string name="car_pic">caricon</string>
    <!-- Strings related to login -->
    <string name="prompt_email">UCSC Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid (@ucsc.edu only)</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_poolcar">This user/password combination is incorrect or email has not been verified</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="prompt_start">Start e.g. 100 Shaffer Road, Santa Cruz, CA 95060</string>
    <string name="prompt_finish">Destination e.g. 1156 High Street, Santa Cruz, CA 95064</string>
    <string name="prompt_numpass"># of Passengers</string>
    <string name="prompt_time">Departure Time</string>
    <string name="prompt_day">Day</string>
    <string name="sched_sub">Submit!</string>

    <string name="title_activity_welcome">Welcome Activity</string>
    <string name="title_activity_driver">Driver Activity</string>
    <string name="title_activity_account">Account Activity</string>
    <string name="title_activity_passenger">Passenger Activity</string>

    <color name="white">#FFFFFF</color>
    <color name="bg_login">#009688</color>
    <color name="bg_register">#2e3237</color>
    <color name="bg_main">#428bca</color>
    <color name="input_login">#222222</color>
    <color name="input_login_hint">#999999</color>
    <color name="input_register">#888888</color>
    <color name="input_register_bg">#3b4148</color>
    <color name="input_register_hint">#5e6266</color>
    <color name="btn_login">#ffffff</color>
    <color name="btn_login_bg">#2e3237</color>
    <color name="lbl_name">#333333</color>
    <color name="btn_logut_bg">#F3875F</color>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_single_item_view">SingleItemView</string>

    <string name="title_activity_main">Parse Custom ListView</string>

    <string name="depDaylabel">"Departure Day : "</string>
    <string name="depTimelabel">"Departure Time : "</string>
    <string name="fromlabel">"Starting Location : "</string>
    <string name="numPasslabel">"Number of Passengers : "</string>
    <string name="tolabel">"Destination : "</string>
    <string name="driverUserlabel">"Driver : "</string>
    <string name="createdAtlabel">"First created : "</string>
    <string name="updatedAtlabel">"Last updated : "</string>

    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>

    <string name="drawer_open">open nav drawer</string>
    <string name="drawer_close">close nav drawer</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
