<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:paddingTop="16dp"
        android:id="@+id/depDaylabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/depDaylabel" />

    <TextView
        android:paddingTop="16dp"
        android:id="@+id/depDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/depDaylabel" />

    <TextView
        android:id="@+id/depTimelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/depDaylabel"
        android:text="@string/depTimelabel" />

    <TextView
        android:id="@+id/depTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/depDay"
        android:layout_toRightOf="@+id/depTimelabel" />

    <TextView
        android:id="@+id/numPasslabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/depTimelabel"
        android:text="@string/numPasslabel" />

    <TextView
        android:id="@+id/numPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/depTime"
        android:layout_toRightOf="@+id/numPasslabel" />

    <TextView
        android:id="@+id/fromlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numPasslabel"
        android:text="@string/fromlabel" />


    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numPass"
        android:layout_toRightOf="@+id/fromlabel" />


    <TextView
        android:id="@+id/tolabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from"
        android:text="@string/tolabel"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from"
        android:layout_toRightOf="@+id/tolabel"
        android:paddingBottom="16dp"/>


</RelativeLayout>
