<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#eee"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1"
        android:fitsSystemWindows="true"
        tools:context="carpooltunnel.slugging.DriverActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"

            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/toolbar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:fitsSystemWindows="true"
                android:minHeight="?attr/actionBarSize"
                />

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_marginLeft="7.0sp"
            android:layout_marginRight="7.0sp"
            card_view:contentPadding="6dp"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="#fff"
            >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/depDaylabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/depDaylabel" />

    <TextView
        android:id="@+id/depDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/depDaylabel" />

    <TextView
        android:id="@+id/depTimelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/depDaylabel"
        android:text="@string/depTimelabel" />

    <TextView
        android:id="@+id/depTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/depDay"
        android:layout_toRightOf="@+id/depTimelabel" />

    <TextView
        android:id="@+id/numPasslabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/depTimelabel"
        android:text="@string/numPasslabel" />

    <TextView
        android:id="@+id/numPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/depTime"
        android:layout_toRightOf="@+id/numPasslabel" />

    <TextView
        android:id="@+id/fromlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numPasslabel"
        android:text="@string/fromlabel" />


    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numPass"
        android:layout_toRightOf="@+id/fromlabel" />


    <TextView
        android:id="@+id/tolabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from"
        android:text="@string/tolabel" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from"
        android:layout_toRightOf="@+id/tolabel" />

    <TextView
        android:id="@+id/driverUserlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to"
        android:text="@string/driverUserlabel" />

    <TextView
        android:id="@+id/driverUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to"
        android:layout_toRightOf="@+id/driverUserlabel" />

    <TextView
        android:id="@+id/createdAtlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/driverUserlabel"
        android:text="@string/createdAtlabel" />

    <TextView
        android:id="@+id/createdAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driverUser"
        android:layout_toRightOf="@+id/createdAtlabel" />

    <TextView
        android:id="@+id/updatedAtlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createdAtlabel"
        android:text="@string/updatedAtlabel" />

    <TextView
        android:id="@+id/updatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createdAt"
        android:layout_toRightOf="@+id/updatedAtlabel" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/book"
        android:textColor="#009688"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_below="@id/updatedAt"
        android:text="Unbook"/>

</RelativeLayout>
</android.support.v7.widget.CardView>
        </android.support.design.widget.CoordinatorLayout>
    </android.support.v4.widget.DrawerLayout>