<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="carpooltunnel.slugging.DriverActivitySubmit"
    android:layout_gravity="center"
    android:background="#eee"
    android:paddingTop="5.0sp"
    android:paddingLeft="7.0sp"
    android:paddingRight="7.0sp">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        card_view:contentPadding="16dp"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="3dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardBackgroundColor="#fff">

    <LinearLayout android:id="@+id/sched_enter_form" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:layout_gravity="center">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <AutoCompleteTextView android:id="@+id/start" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_start"
                android:inputType="text" android:maxLines="1"
                android:singleLine="true"
                android:textColor="#009688"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText android:id="@+id/finish" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_finish"
                android:inputType="text" android:maxLines="1"
                android:singleLine="true"
                android:textColor="#009688"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"/>


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/numpass" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_numpass"
                android:inputType="number" android:maxLines="1"
                android:singleLine="true"
                android:enabled="true"

                android:textColor="#009688"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:editable="true" />

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:weightSum="2">
            <android.support.design.widget.TextInputLayout android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/time" android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_time"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:focusable="false"
                    android:textColor="#009688"
                    android:textColorHint="@color/white"
                    android:textColorHighlight="@color/white"
                    android:layout_gravity="center|left"
                    android:inputType="none"
                    android:textIsSelectable="true"
                    android:enabled="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText android:id="@+id/date" android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_day"
                    android:maxLines="1"
                    android:focusable="false"
                    android:singleLine="true"
                    android:inputType="none"
                    android:textIsSelectable="true"
                    android:textColor="#009688"
                    android:textColorHint="@color/white"
                    android:textColorHighlight="@color/white"
                    android:layout_gravity="center|right"
                    android:enabled="true" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button android:id="@+id/sched_sub_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/sched_sub"
            android:textColor="#009688"
            android:layout_gravity="bottom|right"
            android:fontFamily="sans-serif-light"
            />

    </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>

